...

            <TextView
                android:id="@+id/email_sign_up_fragment_create_an_account_text_view"
                android:layout_width="@dimen/layout_height_or_width_0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/email_sign_up_fragment_description_text_view"
                android:layout_width="@dimen/layout_height_or_width_0dp"
                android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_sign_up_fragment_firstname_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_sign_up_fragment_lastname_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_sign_up_fragment_other_name_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_sign_up_fragment_account_category_text_input_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_sign_up_fragment_email_address_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <AutoCompleteTextView
                    android:id="@+id/email_sign_up_fragment_account_category_auto_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_sign_up_fragment_password_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_sign_up_fragment_confirm_password_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.button.MaterialButton
                android:id="@+id/email_sign_up_fragment_sign_up_button"
                android:layout_width="@dimen/layout_height_or_width_0dp"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/email_sign_up_fragment_login_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/email_sign_up_fragment_already_have_an_account_text_view"
                app:layout_constraintEnd_toEndOf="@+id/email_sign_up_fragment_sign_up_button"
                app:layout_constraintHorizontal_bias="0.0"
...
