...
    <fragment
        android:id="@+id/signup_email_fragment"
        android:name="com.decagonhq.clads.ui.fragments.authentication.SignupEmailFragment"
        android:label="fragment_signup_email"
        tools:layout="@layout/fragment_signup_email">
        <action
            android:id="@+id/action_signupEmailFragment_to_emailVerificationFragment"
            app:destination="@id/email_verification_fragment"/>
        <action
            android:id="@+id/action_signup_email_fragment_to_fragment_login_screen"
            app:destination="@id/fragment_login_screen" />
    </fragment>
    <fragment
...
